--- a/assets/css/main_darkedited.css
+++ b/assets/css/main_darkedited.css
@@ -83,10 +83,6 @@ input, select, textarea {
 	}
 
 	body {
-		background: #fff;
-	}
-
-	.dark-mode {
 		background: #212121;
 	}
 
@@ -102,7 +98,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #a2a2a2;
+		color: #e0e0e0;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
@@ -139,7 +135,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #787878;
+		color: #9E9E9E;
 		font-weight: 400;
 		line-height: 1em;
 		margin: 0 0 1em 0;
@@ -151,7 +147,7 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-size: 2em;
+		font-size: 1.5em;
 		line-height: 1.5em;
 	}
 
